--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,127 +1,218 @@
-body {
-  width: 100%;
-  height: 100vh;
+$colors: (
+    dark-text: #212529,
+    dark-bg: #010203,
+    primary: #007bff
+);
+
+$tablet: 767px;
+$small: 576px;
+$mobile: 575px;
+$spacer: 1rem;
+$big: 992px;
+
+@mixin tablet{
+    @media (max-width: #{$tablet}){
+        @content;
+    }
+}
+@mixin small{
+    @media (min-width: #{$small}){
+        @content;
+    }
+}
+@mixin mobile{
+    @media (max-width: #{$mobile}){
+        @content;
+    }
+}
+@mixin big{
+    @media (min-width: #{$big}){
+        @content;
+    }
 }
 
-section {
-  margin-top: 50px;
+@function color($color-name){
+    @return map-get($colors, $color-name) 
 }
 
-#agliculture, #social, #economy {
-  height: 500px;
-  overflow: hidden;
+body{
+    width: 100%;
+    height: 100vh;
 }
+section, .page-footer{
+    margin-top: 50px;
+}
+#agliculture, #social, #economy{
+    height: 500px;
+    overflow: hidden;
+    .inner{
+        height: 100%;
+        z-index: -1;
+        width: 100%;
+        transition: all .8s;
+        .container-fluid{
+            height: 100%;
+            transition: all .8s;
+            .row{
+                height: 100%;
+            }
+        }
+        &:before{
+            background: url(../images/agliculture.jpg);
+            background-position: bottom;
+            background-size: cover;
+            filter: brightness(0.6) grayscale(1);
+            -webkit-filter: brightness(0.6) grayscale(1);
+            content: "";
+            position: absolute;
+            left: 0;
+            right: 0;
+            height: 500px;
+            width: 100%;
+            transition: all .8s;
+    
+            @include tablet{ height: 400px; }
+        }
+        &:hover{
+            transform: scale(1.06);
+            .container-fluid{ transform: scale(0.95); }
+            &:before{
+                filter: grayscale(0) brightness(0.6);
+                -webkit-filter: grayscale(0) brightness(0.6);
+            }
+        }
+    }
+    button{ width: 100%; }
+    .space{ padding: 10px; }
+    h1{ color: white; }
+    @include tablet{ height: 400px; }
+}
+#social{
+    .inner{
+        &:before{
+            background: url(../images/social.jpg);
+            background-position: center;
+        }
+    }
+}
+#economy{
+    .inner{
+        &:before{
+            background: url(../images/economy.jpg);
+            background-position: center;
+        }
+    }
+}
+.dropdown-menu{
+    background-color: color(dark-text);
+    a{
+        color: white;
+        &:hover{
+            background: color(dark-bg);
+            color: white;
+        }
+    }
+    @include tablet{
+        text-align: center;
+        margin-left: $spacer;
+    }
+}
+.navbar-nav{
+    @include tablet{ text-align: center; }
+}
+.form-inline{
+    @include tablet{ justify-content: center; }
+}
+.page-footer{
+    color: white;
+    a{ color: white; }
+    .socmed{
+        list-style: none;
+        li{
+            display: inline-block;
+            a{
+                &:hover{
+                    color: color(primary);
+                }
+            }
+        }
+        @include tablet{ margin-left: -2.5rem; }
+    }
+    .text-right{
+        p{ margin-bottom: 0; }
+    }
+    .respond, .counts{
+        @include tablet{ text-align: center !important; }
+    }
+    .counts{ 
+        @include tablet{ display: block !important; }
+    }
+}
+#events{
+    .image{
+        overflow: hidden;
+        img{
+            height: 200px;
+            width: 100%;
+            object-fit: cover;
+            transition: all 0.75s;
 
-#agliculture .inner, #social .inner, #economy .inner {
-  height: 100%;
-  z-index: -1;
-  width: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+            &:hover{
+                filter: brightness(0.85);
+            }
+        }
+    }
 }
-
-#agliculture .inner .container-fluid, #social .inner .container-fluid, #economy .inner .container-fluid {
-  height: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+.caption{
+    max-height: 200px;
+    overflow-y: auto;
 }
-
-#agliculture .inner .container-fluid .row, #social .inner .container-fluid .row, #economy .inner .container-fluid .row {
-  height: 100%;
+.caption p, button span{
+    @include big{ font-size: 16px !important; }
+    @include tablet{ font-size: 14px; }
+    @include small{ font-size: 12px; }
+    @include mobile{ font-size: 11px; }
 }
-
-#agliculture .inner:before, #social .inner:before, #economy .inner:before {
-  background: url(../images/agliculture.jpg);
-  background-position: bottom;
-  background-size: cover;
-  filter: brightness(0.6) grayscale(1);
-  -webkit-filter: brightness(0.6) grayscale(1);
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 500px;
-  width: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+.close-small{
+    @include small{ display: none }
 }
-
-@media (max-width: 767px) {
-  #agliculture .inner:before, #social .inner:before, #economy .inner:before {
-    height: 400px;
-  }
+.close-big{
+    visibility: hidden;
+    @include mobile{ display: none}
 }
-
-#agliculture .inner:hover, #social .inner:hover, #economy .inner:hover {
-  -webkit-transform: scale(1.06);
-          transform: scale(1.06);
+.carousel-wrap {
+    margin: auto;
+    padding: 0;
+    width: 100%;
+    position: relative;
 }
-
-#agliculture .inner:hover .container-fluid, #social .inner:hover .container-fluid, #economy .inner:hover .container-fluid {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
+/* fix blank or flashing items on carousel */
+.owl-carousel .item {
+    position: relative;
+    z-index: 100; 
+} 
+/* end fix */
+.owl-nav > div {
+    margin-top: -26px;
+    position: absolute;
+    top: 50%;
+    color: #cdcbcd;
 }
-
-#agliculture .inner:hover:before, #social .inner:hover:before, #economy .inner:hover:before {
-  filter: grayscale(0) brightness(0.6);
-  -webkit-filter: grayscale(0) brightness(0.6);
+.owl-nav{
+    i{ font-size: 52px }
+    .owl-prev{ left: -30px; }
+    .owl-next{ right: -30px; }
 }
-
-#agliculture button, #social button, #economy button {
-  width: 100%;
+.owl-dot.active span, .owl-dot:hover span{
+      background: color(primary) !important;
 }
-
-#agliculture .space, #social .space, #economy .space {
-  padding: 10px;
+#infographics{
+    .item{
+        overflow: hidden;
+        img{
+            height: 300px;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
 }
-
-@media (max-width: 767px) {
-  #agliculture, #social, #economy {
-    height: 400px;
-  }
-}
-
-#social .inner:before {
-  background: url(../images/social.jpg);
-  background-position: center;
-}
-
-#economy .inner:before {
-  background: url(../images/economy.jpg);
-  background-position: center;
-}
-
-.dropdown-menu {
-  background-color: #212529;
-}
-
-.dropdown-menu a, #agliculture h1, #social h1, #economy h1{
-  color: white;
-}
-
-.dropdown-menu a:hover {
-  background: #010203;
-  color: white;
-}
-
-@media (max-width: 767px) {
-  .dropdown-menu {
-    text-align: center;
-    margin-left: 1rem;
-  }
-}
-
-@media (max-width: 767px) {
-  .navbar-nav {
-    text-align: center;
-  }
-}
-
-@media (max-width: 767px) {
-  .form-inline {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-/*# sourceMappingURL=welcome.css.map */
