--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -1,13 +1,32 @@
 $colors: (
     dark-text: #212529,
-    dark-bg: #010203
+    dark-bg: #010203,
+    primary: #007bff
 );
 
 $tablet: 767px;
+$small: 576px;
+$mobile: 575px;
 $spacer: 1rem;
+$big: 992px;
 
 @mixin tablet{
     @media (max-width: #{$tablet}){
+        @content;
+    }
+}
+@mixin small{
+    @media (min-width: #{$small}){
+        @content;
+    }
+}
+@mixin mobile{
+    @media (max-width: #{$mobile}){
+        @content;
+    }
+}
+@mixin big{
+    @media (min-width: #{$big}){
         @content;
     }
 }
@@ -20,7 +39,7 @@ body{
     width: 100%;
     height: 100vh;
 }
-section{
+section, .page-footer{
     margin-top: 50px;
 }
 #agliculture, #social, #economy{
@@ -52,33 +71,21 @@ section{
             width: 100%;
             transition: all .8s;
     
-            @include tablet{
-                height: 400px;
-            }
+            @include tablet{ height: 400px; }
         }
         &:hover{
             transform: scale(1.06);
-            .container-fluid{
-                transform: scale(0.9);
-            }
+            .container-fluid{ transform: scale(0.95); }
             &:before{
                 filter: grayscale(0) brightness(0.6);
                 -webkit-filter: grayscale(0) brightness(0.6);
             }
         }
     }
-    button{
-        width: 100%;
-    }
-    .space{
-        padding: 10px;
-    }
-    h1{
-        color: white;
-    }
-    @include tablet{
-        height: 400px;
-    }
+    button{ width: 100%; }
+    .space{ padding: 10px; }
+    h1{ color: white; }
+    @include tablet{ height: 400px; }
 }
 #social{
     .inner{
@@ -111,12 +118,101 @@ section{
     }
 }
 .navbar-nav{
-    @include tablet{
-        text-align: center;
-    }
+    @include tablet{ text-align: center; }
 }
 .form-inline{
-    @include tablet{
-        justify-content: center;
+    @include tablet{ justify-content: center; }
+}
+.page-footer{
+    color: white;
+    a{ color: white; }
+    .socmed{
+        list-style: none;
+        li{
+            display: inline-block;
+            a{
+                &:hover{
+                    color: color(primary);
+                }
+            }
+        }
+        @include tablet{ margin-left: -2.5rem; }
+    }
+    .text-right{
+        p{ margin-bottom: 0; }
+    }
+    .respond, .counts{
+        @include tablet{ text-align: center !important; }
+    }
+    .counts{ 
+        @include tablet{ display: block !important; }
+    }
+}
+#events{
+    .image{
+        overflow: hidden;
+        img{
+            height: 200px;
+            width: 100%;
+            object-fit: cover;
+            transition: all 0.75s;
+
+            &:hover{
+                filter: brightness(0.85);
+            }
+        }
+    }
+}
+.caption{
+    max-height: 200px;
+    overflow-y: auto;
+}
+.caption p, button span{
+    @include big{ font-size: 16px !important; }
+    @include tablet{ font-size: 14px; }
+    @include small{ font-size: 12px; }
+    @include mobile{ font-size: 11px; }
+}
+.close-small{
+    @include small{ display: none }
+}
+.close-big{
+    visibility: hidden;
+    @include mobile{ display: none}
+}
+.carousel-wrap {
+    margin: auto;
+    padding: 0;
+    width: 100%;
+    position: relative;
+}
+/* fix blank or flashing items on carousel */
+.owl-carousel .item {
+    position: relative;
+    z-index: 100; 
+} 
+/* end fix */
+.owl-nav > div {
+    margin-top: -26px;
+    position: absolute;
+    top: 50%;
+    color: #cdcbcd;
+}
+.owl-nav{
+    i{ font-size: 52px }
+    .owl-prev{ left: -30px; }
+    .owl-next{ right: -30px; }
+}
+.owl-dot.active span, .owl-dot:hover span{
+      background: color(primary) !important;
+}
+#infographics{
+    .item{
+        overflow: hidden;
+        img{
+            height: 300px;
+            width: 100%;
+            object-fit: cover;
+        }
     }
 }
