--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,36 +1,172 @@
+@import url("https://use.typekit.net/ypn1nlu.css");
+* {
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
+  font-weight: 600;
+}
+
 body {
   width: 100%;
   height: 100vh;
 }
 
-section, .page-footer {
-  margin-top: 50px;
+section {
+  margin-bottom: 50px;
 }
 
-#agliculture, #social, #economy {
-  height: 500px;
+#navbar {
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#nav-mhweb-hamburger {
+  width: 30px;
+  height: 25px;
+  position: relative;
+  margin: 5px 0px 0px 0px;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-mhweb-hamburger:hover span {
+  background: white;
+}
+
+#nav-mhweb-hamburger span {
+  display: block;
+  position: absolute;
+  height: 2px;
+  width: 50%;
+  background: rgba(255, 255, 255, 0.5);
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+#nav-mhweb-hamburger.open span {
+  margin-left: 3px;
+  margin-top: -4px;
+}
+
+#nav-mhweb-hamburger span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-mhweb-hamburger span:nth-child(odd) {
+  left: 0px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-mhweb-hamburger span:nth-child(1),
+#nav-mhweb-hamburger span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-mhweb-hamburger span:nth-child(3),
+#nav-mhweb-hamburger span:nth-child(4) {
+  top: 10px;
+}
+
+#nav-mhweb-hamburger span:nth-child(5),
+#nav-mhweb-hamburger span:nth-child(6) {
+  top: 20px;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(1),
+#nav-mhweb-hamburger.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-mhweb-hamburger.open span:nth-child(2),
+#nav-mhweb-hamburger.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-mhweb-hamburger.open span:nth-child(1) {
+  left: 0px;
+  top: 9px;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 9px;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(5) {
+  left: 0px;
+  top: 19px;
+}
+
+#nav-mhweb-hamburger.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 19px;
+}
+
+.navbar-toggler {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  outline: none !important;
+  border: none;
+}
+
+#agriculture,
+#social,
+#economy {
+  height: 100vh;
   overflow: hidden;
 }
 
-#agliculture .inner, #social .inner, #economy .inner {
+#agriculture .inner,
+#social .inner,
+#economy .inner {
   height: 100%;
   z-index: -1;
   width: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
-#agliculture .inner .container-fluid, #social .inner .container-fluid, #economy .inner .container-fluid {
+#agriculture .inner .container-fluid,
+#social .inner .container-fluid,
+#economy .inner .container-fluid {
   height: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
-#agliculture .inner .container-fluid .row, #social .inner .container-fluid .row, #economy .inner .container-fluid .row {
+#agriculture .inner .container-fluid .row,
+#social .inner .container-fluid .row,
+#economy .inner .container-fluid .row {
   height: 100%;
 }
 
-#agliculture .inner:before, #social .inner:before, #economy .inner:before {
+#agriculture .inner:before,
+#social .inner:before,
+#economy .inner:before {
   background: url(../images/agliculture.jpg);
   background-position: bottom;
   background-size: cover;
@@ -40,49 +176,49 @@ section, .page-footer {
   position: absolute;
   left: 0;
   right: 0;
-  height: 500px;
+  height: 100vh;
   width: 100%;
-  -webkit-transition: all .8s;
-  transition: all .8s;
+  -webkit-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
-@media (max-width: 767px) {
-  #agliculture .inner:before, #social .inner:before, #economy .inner:before {
-    height: 400px;
-  }
-}
-
-#agliculture .inner:hover, #social .inner:hover, #economy .inner:hover {
+#agriculture .inner:hover,
+#social .inner:hover,
+#economy .inner:hover {
   -webkit-transform: scale(1.06);
           transform: scale(1.06);
 }
 
-#agliculture .inner:hover .container-fluid, #social .inner:hover .container-fluid, #economy .inner:hover .container-fluid {
+#agriculture .inner:hover .container-fluid,
+#social .inner:hover .container-fluid,
+#economy .inner:hover .container-fluid {
   -webkit-transform: scale(0.95);
           transform: scale(0.95);
 }
 
-#agliculture .inner:hover:before, #social .inner:hover:before, #economy .inner:hover:before {
+#agriculture .inner:hover:before,
+#social .inner:hover:before,
+#economy .inner:hover:before {
   filter: grayscale(0) brightness(0.6);
   -webkit-filter: grayscale(0) brightness(0.6);
 }
 
-#agliculture button, #social button, #economy button {
+#agriculture button,
+#social button,
+#economy button {
   width: 100%;
 }
 
-#agliculture .space, #social .space, #economy .space {
+#agriculture .space,
+#social .space,
+#economy .space {
   padding: 10px;
 }
 
-#agliculture h1, #social h1, #economy h1 {
+#agriculture h1,
+#social h1,
+#economy h1 {
   color: white;
-}
-
-@media (max-width: 767px) {
-  #agliculture, #social, #economy {
-    height: 400px;
-  }
 }
 
 #social .inner:before {
@@ -97,6 +233,7 @@ section, .page-footer {
 
 .dropdown-menu {
   background-color: #212529;
+  border: none;
 }
 
 .dropdown-menu a {
@@ -126,6 +263,14 @@ section, .page-footer {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media (max-width: 575px) {
+  .form-inline .form-control {
+    display: inline-block !important;
+    width: 60% !important;
+    vertical-align: middle !important;
   }
 }
 
@@ -160,7 +305,8 @@ section, .page-footer {
 }
 
 @media (max-width: 767px) {
-  .page-footer .respond, .page-footer .counts {
+  .page-footer .respond,
+  .page-footer .counts {
     text-align: center !important;
   }
 }
@@ -175,6 +321,12 @@ section, .page-footer {
   overflow: hidden;
 }
 
+@media (max-width: 575px) {
+  #events .image:nth-child(5), #events .image:nth-child(6), #events .image:nth-child(7), #events .image:nth-child(8) {
+    display: none;
+  }
+}
+
 #events .image img {
   height: 200px;
   width: 100%;
@@ -184,9 +336,10 @@ section, .page-footer {
   transition: all 0.75s;
 }
 
-#events .image img:hover {
-  -webkit-filter: brightness(0.85);
-          filter: brightness(0.85);
+@media (max-width: 575px) {
+  .btn {
+    font-size: 12px;
+  }
 }
 
 .caption {
@@ -195,25 +348,29 @@ section, .page-footer {
 }
 
 @media (min-width: 992px) {
-  .caption p, button span {
+  .caption p,
+  button span {
     font-size: 16px !important;
   }
 }
 
 @media (max-width: 767px) {
-  .caption p, button span {
+  .caption p,
+  button span {
     font-size: 14px;
   }
 }
 
 @media (min-width: 576px) {
-  .caption p, button span {
+  .caption p,
+  button span {
     font-size: 12px;
   }
 }
 
 @media (max-width: 575px) {
-  .caption p, button span {
+  .caption p,
+  button span {
     font-size: 11px;
   }
 }
@@ -267,7 +424,8 @@ section, .page-footer {
   right: -30px;
 }
 
-.owl-dot.active span, .owl-dot:hover span {
+.owl-dot.active span,
+.owl-dot:hover span {
   background: #007bff !important;
 }
 
@@ -280,5 +438,10 @@ section, .page-footer {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.btn-shadow:hover {
+  -webkit-box-shadow: 10px 15px 30px -12px rgba(0, 123, 255, 0.6) !important;
+          box-shadow: 10px 15px 30px -12px rgba(0, 123, 255, 0.6) !important;
 }
 /*# sourceMappingURL=welcome.css.map */
