--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,4 +1,4 @@
-@import url("https://use.typekit.net/ypn1nlu.css");
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 * {
   font-family: "Poppins", sans-serif;
 }
