--- a/public/css/welcome.scss
+++ b/public/css/welcome.scss
@@ -1,4 +1,5 @@
-@import url("https://use.typekit.net/ypn1nlu.css");
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+
 $colors: (
     dark-text: #212529,
     dark-bg: #010203,
